Fixed blurred image of author in Post Header

--- a/styles/global.css
+++ b/styles/global.css
@@ -5,7 +5,7 @@
 @layer base {
     html,
     body {
-        @apply scroll-smooth m-0 p-0 w-full text-dark dark:text-light bg-white dark:bg-dark
+        @apply m-0 p-0 w-full text-dark dark:text-light bg-white dark:bg-dark
     }
 
     svg {
